--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,17 @@
 accelerate
 bitsandbytes
 datasets
-deepspeed==0.17.1
-einops
+deepspeed==0.17.2
+flash-attn==2.8.0.post2
 isort
 jsonlines
 loralib
 optimum
 optree>=0.13.0
 peft
-ray[default]==2.43.0
+pynvml>=12.0.0
+tensorboard
 torchdata
 torchmetrics
-tqdm
-transformers==4.52.4
 transformers_stream_generator
 wandb
-wheel
